syntax = "proto3";
package flinderax_backend;

message CardTransactionHistory{
  string transaction_id = 1;
  float total_due_input =  2;
  int64 timestamp_seconds = 3;
  int32 timestamp_nanos = 4;
}

message CardHistoryList {
  repeated CardTransactionHistory histories = 1;
}

message Card {
  string card_id = 1;
  string card_name = 2;
  string card_bank = 3;
  int32 card_primary_color = 4;
  int32 card_secondary_color = 5;
  optional float last_total_due = 6;
  optional float last_delta = 7;
}

message CardList {
  repeated Card cards = 1;
}
